--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "vite"
   },
   "devDependencies": {
-    "vite": "^4.1.4"
+    "vite": "^4.1.4",
+    "vite-plugin-checker": "^0.5.6"
   }
 }
